# Hugo4OS

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  linker.ld  rust-toolchain.toml  thirdparty-licenses.txt
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
crates/bootloader_bios/: Cargo.toml  x86_64-bootloader.json
crates/bootloader_bios/src/: boot_info.rs  config.rs  lib.rs  main.rs
crates/bootloader_bios/src/asm/: stage_3.s  vesa.s
crates/bootloader_bios/src/binary/: mod.rs  parsed_config.rs
crates/hugo4os_syscall/src/: lib.rs
crates/hugo4os_syscall/src/arch/: x86_64.rs
crates/hugo4os_x86_64_bios/: Cargo.toml
crates/hugo4os_x86_64_bios/src/: interrupts.rs  main.rs  memory.rs  rendering.rs
crates/libs/hugo4os_std/: Cargo.toml
crates/libs/hugo4os_syscall/: Cargo.toml
crates/libs/hugo4os_syscall/src/: ids.rs  lib.rs  raw.rs  stream.rs
crates/libs/hugo4os_syscall/src/arch/: mod.rs
res/fonts/OpenDyslexic/: License.txt
res/images/: tga-test.tga
src/: constants.rs  cpu_renderer.rs  data.rs  global_desc_table.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  tests.rs
src/arch/: mod.rs
src/arch/_x86_64/: interrupts.rs  memory.rs  mod.rs  rendering.rs
src/kernel/: architecture.rs  interrupts.rs  memory.rs  mod.rs
src/kernel/abstractions/: mod.rs
src/kernel/rendering/: mod.rs
src/kernel/rendering/backend/: cpu.rs  mod.rs
src/kernel/rendering/font/: mod.rs
src/loaders/image/: mod.rs  tga.rs
src/task/: executor.rs  keyboard.rs  mod.rs  process_manager.rs
src/util/: mod.rs
targets/: x86_64-hugo4os.json
