[package]
name = "hugo4os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/hugo4os_std",
    "crates/hugo4os_syscall",
    "crates/bootloader_bios",
    "crates/hugo4os_x86_64_bios",
]

[features]
default = ["serial"]
verbose = ["serial"]
serial = ["uart_16550"]

[dependencies]

# External
crossbeam-queue = { version = "0.3.5", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.5", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.2", default-features = false }
bootloader_bios = { path = "./crates/bootloader_bios" }
uart_16550 = { version = "0.2.17", optional = true }
pc-keyboard = "0.5.1"
fontdue = "0.7.2"
libm = "0.2.1"

# Internal
hugo4os_syscall = { path = "./crates/hugo4os_syscall" }

[package.metadata.bootloader]
map-physical-memory = true

[profile.dev]
opt-level = 1 # Initial boot is incredibly slow on opt-level=0
panic = "abort"

[profile.release]
panic = "abort"
lto = false
debug = true
overflow-checks = true